package xce.feed;

message PbFeedInteractionCount {
  required int64  feed  = 1;
  required int32  reply_count = 3;
  required int32  range  = 2;
  required int32  click_count   = 4;
  required int32  view_count  = 5;
}


